--- a/demo.html
+++ b/demo.html
@@ -20,11 +20,11 @@
 <body>
   
     <div class="content"></div>
-    <script type="text/javascript" src="./JWordCloud.js"></script>
+    <script type="text/javascript" src="./src/js/JWordCloud.js"></script>
     <script>
         var words = {
-            'JWordCloud': 101,
-            '3d':42,
+            'JWordCloud': 1010,
+            '3d':420,
             'JavaScript': 23,
             'CSS3':45,
             'Animation': 109,
@@ -45,7 +45,7 @@
             // 词云颜色板
             colors: ['red','blue','orange','green','purple', 'yellow','skyblue','#673ab7','#3f51b5','#ff5722','#607d8b'],
             // 词云标准值字体大小
-            fontSize: 28
+            fontSize: 32
         });
     </script>
 </body>
