--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="./src/js/JWordCloud.js"></script>
     <script>
         var words = {
-            'JWordCloud': 1010,
+            'JWordCloud': 10100,
             '3d':420,
             'JavaScript': 23,
             'CSS3':45,
@@ -45,7 +45,9 @@
             // 词云颜色板
             colors: ['red','blue','orange','green','purple', 'yellow','skyblue','#673ab7','#3f51b5','#ff5722','#607d8b'],
             // 词云标准值字体大小
-            fontSize: 32
+            fontSize: 32,
+            maxFontSize: 72,
+            minFontSize: 20
         });
     </script>
 </body>
